# RAG-Chat

./: .gitignore  README.md  deploy.sh
backend/: .env.example  pyproject.toml  requirements.txt
backend/src/: app.py  qdrant.py  rag.py
frontend/rag-demo/: index.html  package-lock.json  package.json
frontend/rag-demo/src/: App.css  App.tsx  ChatForm.tsx  ChatResponse.tsx  api.ts  index.css  types.ts
